--- a/custom.css
+++ b/custom.css
@@ -1,19 +1,14 @@
-<!-- Link List -->
-
-.link-list {
+    .link-list {
     max-width:500px;
     margin: 0 0 10px 0;
     background-color: #f5f5f5;
     padding: 20px;
-}
-.link-list:hover {
-background-color: #d3d3d3;
-}
-.link-list a {
-text-decoration:none;
-}
-.link-title {
-	color: #277ca5;
+    }
+    .link-list:hover {
+    background-color: #d3d3d3;
+    }
+    .link-title {
+    color: #277ca5;
     font-weight: bold;
     font-size: 1.2em;
     display: block;
@@ -22,335 +17,293 @@ text-decoration:none;
     padding: 0px 0px 10px 0px;
     margin: 0px 0px 15px 0px;
     font-family: arial;
-}
-.link-description {
-color: #666666;
-font-family: arial;
-}
-
-<!-- Introduction with Contact -->
-.info-wrapper { 
-  overflow:hidden;
-  border-bottom: 1px solid #ccc;
-}
-#main-info {
-  float:left; 
-  margin-right:20px;
-  width:400px;
-  margin-bottom:20px;
-}
-#contact { 
-  overflow:hidden;
-  margin-bottom: 10px;
-  min-width:150px;
-}
-.contact-row {
-overflow:hidden;
-display: table;
-margin-bottom:15px;
-}
-.contact-icon {
-float: left;
-padding-right:20px;
-}
-.title {
-text-align:left;
-padding-top: 30px;
-padding-bottom: 15px;
-border-bottom: 1px solid #ccc;
-text-transform: uppercase;
-}
-.contact-container {
-margin-top: 25px;
-}
-.contact-items, .contact-items {
+    }
+    .link-description {
+    color: #666666;
+    font-family: arial;
+    }
+    .info-wrapper {
+    overflow:hidden;
+    border-bottom: 1px solid #ccc;
+    }
+    #main-info {
+    float:left;
+    padding-right: 80px;
+    width:400px;
+    padding-bottom: 50px;
+    }
+    #contact {
+    overflow:hidden;
+    margin-bottom: 10px;
+    min-width:150px;
+    }
+    .contact-row {
+    overflow:hidden;
+    display: table;
+    margin-bottom:15px;
+    }
+    .contact-icon {
+    float: left;
+    padding-right:20px;
+    }
+    .contact-title {
+    text-align:left;
+    padding-top: 30px;
+    padding-bottom: 15px;
+    border-bottom: 1px solid #ccc;
+    text-transform: uppercase;
+    color: #666699;
+    font-weight: bold;
+    font-size: 16px;
+    }
+    .contact-container {
+    margin-top: 25px;
+    color: #666699;
+    }
+    .contact-items, .contact-items {
     display: table-cell;
-    vertical-align: middle; 
-}
-
-
-<!-- Callout Blue -->
-
-.callout-blue {
+    vertical-align: middle;
+    }
+    .callout-blue {
     max-width:500px;
     margin: 0 0 10px 0;
     background-color: #e5efff;
     padding: 20px;
-}
-.callout-blue:hover {
-background-color: #d2e3ff;
-}
-.callout-blue a {
-text-decoration:none;
-}
-.callout-title {
-	color: #003399;
+    }
+    .callout-blue:hover {
+    background-color: #d2e3ff;
+    }
+    .callout-title {
+    color: #003399;
     font-weight: bold;
     font-size: 1.2em;
     display: block;
     padding: 0px 0px 10px 0px;
     margin: 0px 0px 5px 0px;
     font-family: arial;
-}
-.callout-description {
-color: #666666;
-font-family: arial;
-}
-
-<!-- Primary Button -->
-
-.primary-button {
-    background-color: #666699; 
+    }
+    .callout-description {
+    color: #666666;
+    font-family: arial;
+    }
+    .primary-button {
+    background-color: #666699;
     border: none;
     color: white;
-    padding: 16px 32px;
+    padding: 12px 22px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 12px;
     margin: 4px 2px;
-    -webkit-transition-duration: 0.4s; 
+    -webkit-transition-duration: 0.4s;
     transition-duration: 0.4s;
     cursor: pointer;
-}
-.primary-button:hover {
-background-color: #8686c9;
-}
-
-<!-- Yellow Alert -->
-
-.yellow-alert {
-  background-color: #f1f1f1;
-  background-position: 2rem 2rem;
-  background-repeat: no-repeat;
-  background-size: 5.2rem;
-  padding-bottom: 1.4rem;
-  padding-left: 3rem;
-  padding-right: 1rem;
-  padding-top: 1rem;
-  position: relative;
-}
-
-.yellow-alert::before {
-  background-color: #8b8b8b;
-  content: '';
-  height: 100%;
-  left: 0;
-  position: absolute;
-  top: 0;
-  width: 1rem;
-}
-
-.yellow-alert a {
-  color: #205493;
-}
-
-.yellow-alert a:focus, .yellow-alert a:hover {
-  color: #112e51;
-}
-
-.yellow-alert ul {
-  margin-bottom: 0;
-  margin-top: 1rem;
-  padding-left: 1rem;
-}
-.yellow-alert-icon {
-  display: table-cell;
-  padding-right: 1rem;
-}
-
-.yellow-alert-body {
-  display: table-cell;
-  padding-left: 5rem;
-  vertical-align: top;
-}
-
-.yellow-alert-heading {
-  margin-top: 0;
-  margin-bottom: 5;
-}
-
-.yellow-alert-text {
-  font-family: "Arial", sans-serif;
-  margin-bottom: 0;
-  margin-top: 0;
-}
-.yellow-alert-warning {
-  background-color: #fff1d2;
-  background-image: url("#");
-  background-image: url("#");
-}
-
-.yellow-alert-warning::before {
-  background-color: #fdb81e;
-}
-
-<!-- Link List Grouping 3 Column CSS -->
-
-.link-list-group {
+    }
+    .primary-button:hover {
+    background-color: #8686c9;
+    }
+    .yellow-alert {
+    background-color: #f1f1f1;
+    background-position: 1.8rem 1rem;
+    background-repeat: no-repeat;
+    background-size: 3rem;
+    padding-bottom: 1.4rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top: 1rem;
+    position: relative;
+    }
+    .yellow-alert::before {
+    background-color: #8b8b8b;
+    content: '';
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 1rem;
+    }
+    .yellow-alert a {
+    color: #205493;
+    }
+    .yellow-alert a:focus, .yellow-alert a:hover {
+    color: #112e51;
+    }
+    .yellow-alert ul {
+    margin-bottom: 0;
+    margin-top: 1rem;
+    padding-left: 1rem;
+    }
+    .yellow-alert-icon {
+    display: table-cell;
+    }
+    .yellow-alert-body {
+    display: table-cell;
+    padding-left: 5rem;
+    vertical-align: top;
+    }
+    .yellow-alert-heading {
+    margin-top: 0;
+    margin-bottom: 5;
+    }
+    .yellow-alert-text {
+    font-family: "Arial", sans-serif;
+    margin-bottom: 0;
+    margin-top: 0;
+    }
+    .yellow-alert-warning {
+    background-color: #fff1d2;
+    background-image: url("/images/pages/N75/alert.png");
+    background-image: url("/images/pages/N75/alert.png");
+    }
+    .yellow-alert-warning::before {
+    background-color: #fdb81e;
+    }
+    .link-list-group {
     float: left;
-    width: 32.6%;
+    width: 25%;
     padding: 10px;
     margin:5px;
     background-color: #f5f5f5;
-  display: inline-block;
-}
-.link-list-group a {
-  text-decoration: none;
-}
-.title-text {
-  color: #277ca5;
-  font-size: 20px;
-}
-.link-list-row-3:after {
+    display: inline-block;
+    }
+    .title-text {
+    color: #277ca5;
+    font-size: 16px;
+    }
+    .link-list-row-3:after {
     content: "";
     display: table;
     clear: both;
-}
-
-@media (max-width: 600px) {
-    .link-list-group {
-        width: 100%;
     }
-}
-.list-link-group img {
+    @media (max-width: 600px) {
+    .link-list-group {
+    width: 100%;
+    }
+    }
+    .list-link-group img {
     max-width: 100%;
     max-height: 100%;
-}
-.img-icon {
-  width: 25px;
-  padding-left: 10px;
-}
-
-<!-- Report a Concern Box CSS -->
-* {
-    box-sizing: border-box;
-}
-.red-bar {
-  background-color: #cc0033;
-  margin:0;
-  width: 100%;
-  min-height: 20px;
-}
-body {
-    margin: 0;
-}
-
-.report-column {
+    }
+    .img-icon {
+    width: 15px;
+    padding-left: 10px;
+    }
+    .red-bar {
+    background-color: #cc0033;
+    margin:0;
+    width: 100%;
+    min-height: 20px;
+    }
+    .report-column {
     float: left;
     width: 50%;
-}
-
-.report-row:after {
+    }
+    .report-row:after {
     content: "";
     display: table;
     clear: both;
-}
-.report-col {
-  width:100%;
-  background-color: #f5f5f5;
-  padding: 25px;
-}
-.report-column a {
-  text-decoration: none;
-}
-.report-title {
-  color: #000000;
-  font-size: 20px;
-  font-family: "arial";
-  text-transform: uppercase;
-}
-/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-@media (max-width: 600px) {
-    .report-column {
-        width: 100%;
     }
-}
-.report-col img {
+    .report-row {
+    padding-top: 15px;
+    }
+    .report-col {
+    padding: 20px;
+    background-color: #f5f5f5;
+    }
+    .report-column a {
+    text-decoration: none;
+    }
+    .report-title {
+    color: #000000;
+    font-size: 16px;
+    font-family: "arial";
+    text-transform: uppercase;
+    text-weight: bold;
+    }
+    /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+    @media (max-width: 600px) {
+    .report-column {
+    width: 100%;
+    }
+    }
+    .report-col img {
     max-width: 100%;
     max-height: 100%;
-}
-.img-icon {
-  width: 25px;
-  padding-left: 10px;
-}
-
-<!--Steps Listing CSS -->
-
-.info-steps-wrapper { 
-  overflow:hidden;
-  border-bottom: 1px solid #e5efff;
-}
-
-.col-wrapper div {
-   min-height: 200px;
-   padding: 10px;
-}
-.left-step {
-  float:left; 
-  margin-right:20px;
-  width:150px;
-}
-.step-info { 
-  overflow:hidden;
-  min-height:170px;
-  display:flex;
-  align-items:center;
-}
-
-@media screen and (max-width: 400px) {
-   .left-step { 
+    }
+    .img-icon {
+    width: 15px;
+    padding-left: 10px;
+    }
+    .info-steps-wrapper {
+    overflow:hidden;
+    border-bottom: 1px solid #e5efff;
+    padding-bottom:15px;
+    padding-top: 15px;
+    }
+    .col-wrapper div {
+    min-height: 200px;
+    padding: 10px;
+    }
+    .left-step {
+    float:left;
+    margin-right:20px;
+    width:150px;
+    }
+    .step-info {
+    overflow:hidden;
+    min-height:100px;
+    display:flex;
+    align-items:center;
+    }
+    @media screen and (max-width: 400px) {
+    .left-step {
     float: none;
     margin-right:0;
     width:auto;
     border:0;
-  }
-}
-.left-step img {
+    }
+    }
+    .left-step img {
     max-width: 100%;
     max-height: 100%;
-}
-.img-col {
-  width: 200px;
-}
-.title-step {
-  font-family: "arial";
-  font-size: 20px;
-  color: #277ca5
-}
-
-<!-- Callout with Image CSS-->
-
-.col-callout-wrapper { 
-  overflow:hidden;
-}
-
-.col-callout-wrapper div {
-   min-height: 200px;
-   padding: 10px;
-}
-.left-callout-col {
-  float:left; 
-  margin-right:20px;
-  width:150px;
-}
-.right-callout-col { 
-  overflow:hidden;
-  min-height:170px;
-}
-
-@media screen and (max-width: 400px) {
-   .left-col { 
+    }
+    .img-col {
+    width: 100px;
+    }
+    .title-step {
+    font-family: "arial";
+    font-size: 20px;
+    color: #277ca5
+    }
+    .col-callout-wrapper {
+    overflow:hidden;
+    }
+    .col-callout-wrapper div {
+    min-height: 200px;
+    padding: 10px;
+    }
+    .left-callout-col {
+    float:left;
+    margin-right:20px;
+    width:150px;
+    }
+    .right-callout-col {
+    overflow:hidden;
+    min-height:170px;
+    }
+    @media screen and (max-width: 400px) {
+    .left-col {
     float: none;
     margin-right:0;
     width:auto;
     border:0;
-  }
-}
-.left-callout-col img {
+    }
+    }
+    .left-callout-col img {
     max-width: 100%;
     max-height: 100%;
-}
-.img-col {
-  width: 200px;
-}
+    }
+    .img-callout-col {
+    width: 200px;
+    }
