--- a/custom.css
+++ b/custom.css
@@ -306,3 +306,26 @@
     .img-callout-col {
     width: 200px;
     }
+#members {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+#members td, #customers th {
+    border: 1px solid #fff;
+    padding: 12px;
+    background-color: #f5f5f5;
+    width: 50%;
+    color: #333333;
+}
+
+#members th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #666666;
+    color: white;
+    padding-left: 10px;
+    border: 1px solid #fff;
+    font-weight: bold;
+}
