--- a/custom.css
+++ b/custom.css
@@ -306,6 +306,8 @@
     .img-callout-col {
     width: 200px;
     }
+
+<!-- Members Table -->
 #members {
     border-collapse: collapse;
     width: 100%;
