--- a/custom.css
+++ b/custom.css
@@ -338,7 +338,7 @@
   padding: 20px;
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #999;
+  background-color: #e3e7ea;
   align-items: center;
   line-height: 2;
   border-radius: 5px;
