--- a/custom.css
+++ b/custom.css
@@ -335,7 +335,7 @@
 
 <! Newsletter Callout -->
 
-.row {
+.newsletter-row {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -348,7 +348,7 @@
   border-radius: 5px;
 }
 
-.column {
+.newsletter-column {
   flex-basis: 100%;
 }
 
