--- a/custom.css
+++ b/custom.css
@@ -467,3 +467,48 @@ cta-block * {
   right: 100%;
 }
 
+.blue-alert::before {
+    background-color: #8b8b8b;
+    content: '';
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 1rem;
+    }
+    .blue-alert a {
+    color: #205493;
+    }
+    .blue-alert a:focus, .blue-alert a:hover {
+    color: #BAEAFD;
+    }
+    .blue-alert ul {
+    margin-bottom: 0;
+    margin-top: 1rem;
+    padding-left: 1rem;
+    }
+    .blue-alert-icon {
+    display: table-cell;
+    }
+    .blue-alert-body {
+    display: table-cell;
+    padding-left: 2rem;
+    vertical-align: top;
+    }
+    .blue-alert-heading {
+    margin-top: 0;
+    margin-bottom: 5;
+    }
+    .blue-alert-text {
+    font-family: "Arial", sans-serif;
+    margin-bottom: 0;
+    margin-top: 0;
+    }
+    .blue-alert-warning {
+    background-color: #BAEAFD;
+    background-image: url("/images/pages/N75/alert.png");
+    background-image: url("/images/pages/N75/alert.png");
+    }
+    .blue-alert-warning::before {
+    background-color: #003399;
+    }
