--- a/custom.css
+++ b/custom.css
@@ -467,7 +467,22 @@ cta-block * {
   right: 100%;
 }
 
-.blue-alert::before {
+.yellow-alert {
+    background-color: #f1f1f1;
+    background-position: 1.8rem 1rem;
+    background-repeat: no-repeat;
+    background-size: 3rem;
+    padding-bottom: 1.4rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top: 1rem;
+    position: relative;
+  display: flex;
+  flex-direction: row;
+    align-items: center;
+ 
+    }
+    .blue-alert::before {
     background-color: #8b8b8b;
     content: '';
     height: 100%;
@@ -480,7 +495,7 @@ cta-block * {
     color: #205493;
     }
     .blue-alert a:focus, .blue-alert a:hover {
-    color: #BAEAFD;
+    color: #112e51;
     }
     .blue-alert ul {
     margin-bottom: 0;
@@ -505,10 +520,10 @@ cta-block * {
     margin-top: 0;
     }
     .blue-alert-warning {
-    background-color: #BAEAFD;
+    background-color: #fff1d2;
     background-image: url("/images/pages/N75/alert.png");
     background-image: url("/images/pages/N75/alert.png");
     }
     .blue-alert-warning::before {
-    background-color: #003399;
+    background-color: #fdb81e;
     }
