--- a/custom.css
+++ b/custom.css
@@ -520,10 +520,10 @@ cta-block * {
     margin-top: 0;
     }
     .blue-alert-warning {
-    background-color: #ccd6ea;
+    background-color: #D8F0FD;
     background-image: url("/images/pages/N75/alert.png");
     background-image: url("/images/pages/N75/alert.png");
     }
     .blue-alert-warning::before {
-    background-color: #003399;
+    background-color: #0a88cc;
     }
