--- a/custom.css
+++ b/custom.css
@@ -527,3 +527,10 @@ cta-block * {
     .blue-alert-warning::before {
     background-color: #0a88cc;
     }
+.pullout {
+    font-style: italic;
+    font-size: 16px;
+    color:#333;
+    font-stretch: expanded;
+}
+    
