--- a/custom.css
+++ b/custom.css
@@ -28,7 +28,7 @@
     #main-info {
     float:left;
     padding-right: 80px;
-    width:400px;
+    width:70%;
     padding-bottom: 50px;
     }
     #contact {
