--- a/custom.css
+++ b/custom.css
@@ -28,7 +28,7 @@
     #main-info {
     float:left;
     padding-right: 80px;
-    width:60%;
+    width:350px;
     padding-bottom: 50px;
     }
     #contact {
