--- a/custom.css
+++ b/custom.css
@@ -191,7 +191,8 @@
     }
     .img-icon {
     width: 20px;
-    padding-left: 10px;
+    padding-left: 5px;
+    padding-bottom: 5px;
     }
     .red-bar {
     background-color: #cc0033;
