--- a/custom.css
+++ b/custom.css
@@ -237,8 +237,9 @@
     max-height: 100%;
     }
     .img-icon {
-    width: 20px;
-    padding-left: 10px;
+    width: 25px;
+    padding-left: 5px;
+    padding-bottom: 5px;
     }
     .info-steps-wrapper {
     overflow:hidden;
