--- a/custom.css
+++ b/custom.css
@@ -522,7 +522,7 @@ cta-block * {
     margin-bottom: 5;
     }
     .blue-alert-text {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat';
     margin-bottom: 0;
     margin-top: 0;
     }
