--- a/custom.css
+++ b/custom.css
@@ -28,7 +28,7 @@
     #main-info {
     float:left;
     padding-right: 50px;
-    width:500px;
+    width:60%;
     padding-bottom: 50px;
     }
     #contact {
