--- a/custom.css
+++ b/custom.css
@@ -29,7 +29,7 @@
     float:left;
     padding-right: 50px;
     width:60%;
-    min-width:300px;
+    min-width:320px;
     padding-bottom: 50px;
     }
     #contact {
@@ -430,7 +430,7 @@ cta-block * {
 }
 
 .card3 .cta-link::after {
-  content: '🏊';
+  content: '⚽️';
   position: absolute;
   font-size: 12rem;
   bottom: -5rem;
